--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,18 +1,27 @@
-.content {
+.container {
   display: flex;
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 549px) {
+@media screen and (max-width: 699px) {
 	[class*="col-"]{
 		width: 100%;
 	}
+
+	.logo{
+		margin-left: auto;
+	}
+
+	.name_text{
+		text-align: center;
+	}
+
+	.title_text{
+		text-align: center;
+	}
 }
 
-@media screen and (min-width: 550px) {
-	p{
-		background-color: red;
-	}
+@media screen and (min-width: 700px){
 	.col-1{
 		width: 8.33%;
 	}
@@ -51,16 +60,14 @@
 	}
 }
 
-@media screen and (min-width: 950px) {
-	p{
-		background-color: green;
-	}
-  main, .header__inner, .nav, .content {
-    width: 850px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+@media screen and (min-width: 960px) {
 
+	.container{
+    	width: 950px;
+    	margin-left: auto;
+    	margin-right: auto;
+    }
+  
   	.col-l-1{
 		width: 8.33%;
 	}
