--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -19,6 +19,15 @@
 	.title_text{
 		text-align: center;
 	}
+
+	.main_image{
+		width: 100%;
+		display: block;
+	}
+
+	.row{
+		margin-bottom: 5%;
+	}
 }
 
 @media screen and (min-width: 700px){
@@ -57,6 +66,11 @@
 	}
 	.col-12{
 		width: 100%;
+	}
+
+	.main_image{
+		width: 100%;
+		display: block;
 	}
 }
 
