--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,12 +1,12 @@
-*{
+* {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-*{
-	font-family: 'Lato', sans-serif;
+* {
+	font-family: "Lato", sans-serif;
 }
 
 .row{
@@ -58,8 +58,8 @@
 }
 
 .main_image{
-	width: 950px;
-	height: 350px;
+	width: 100%;
+	height: auto;
 	display: block;
 }
 
