--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -3,6 +3,14 @@
   flex-wrap: wrap;
 }
 
+@media screen and (max-width: 300px) {
+	.project_image{
+		width: 100%;
+		height: auto;
+		display: block;
+	}
+}
+
 @media screen and (max-width: 699px) {
 	[class*="col-"]{
 		width: 100%;
@@ -18,11 +26,6 @@
 
 	.title_text{
 		text-align: center;
-	}
-
-	.main_image{
-		width: 100%;
-		display: block;
 	}
 
 	.row{
@@ -66,11 +69,6 @@
 	}
 	.col-12{
 		width: 100%;
-	}
-
-	.main_image{
-		width: 100%;
-		display: block;
 	}
 }
 
